--- a/Ex2/web_app/public/stylesheets/style.css
+++ b/Ex2/web_app/public/stylesheets/style.css
@@ -1,30 +1,51 @@
 body{
-  background-color: #F8F005;
+  background-color: #20063B;
+}
+
+
+.grid {
+  display: flex;
+  grid-template-columns: repeat(1, 100%);
+  grid-column-gap: 10px;
+  padding: 20px;
+  color: #C2F9BB;
+}
+
+h3{
+  font-family: Arial;
 }
 
 h1 {
-  color: #00B7FF;
+  color: #CC3363;
   font-family: Arial;
   text-align: center;
+  font-size:65px;
 }
 h2 {
   font-family: Arial;
-  color: #00B7FF;
+  color: #9AD1D4;
   text-align: center;
+  font-size:30px;
 }
 
 .description {
   text-align: center;
+  color: #C2F9BB;
 
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 33%);
-  grid-column-gap: 10px;
+.forms{
+  padding-left: 45%;
 }
 
-.container {
+label:hover{
+  border: 1px solid var(--other);
+  border-radius: 100%;
+  color:red;
+}
+
+
+.contain {
   text-align: center;
 }
 
@@ -32,13 +53,12 @@ h2 {
   width: 280px;
   height: 66px;
   font-size: 36px;
-  /*font-family: 'calibri', cursive;*/
-  background: linear-gradient(45deg, transparent 5%, #FF013C 5%);
+  background: linear-gradient(45deg, transparent 5%, #CC3363 5%);
   border: 0;
   color: #fff;
   letter-spacing: 3px;
   line-height: 68px;
-  box-shadow: 6px 0px 0px #00E6F6;
+  box-shadow: 6px 0px 0px #9AD1D4;
   outline: transparent;
   position: relative;
 }
@@ -58,14 +78,23 @@ h2 {
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(45deg, transparent 3%, #00E6F6 3%, #00E6F6 5%, #FF013C 5%);
+  background: linear-gradient(45deg, transparent 3%, #9AD1D4 3%, #9AD1D4 5%, #FF013C 5%);
   text-shadow: -3px -3px 0px #F8F005, 3px 3px 0px #00E6F6;
   clip-path: var(--slice-0);
+}
+
+#btnStart:hover{
+  width: 288px;
+  height: 74px;
+  transition-duration: 0.6s;
 }
 
 #btnStart:hover::after {
   animation: 1s glitch;
   animation-timing-function: steps(2, end);
+  width: 295px;
+  height: 80px;
+  
 }
 
 @keyframes glitch {
@@ -114,3 +143,112 @@ h2 {
     transform: translate(0);
   }
 }
+
+
+
+
+
+.container{
+  display: block;
+  position: relative;
+  margin: 20px auto;
+  height: auto;
+  width: 350px;
+  padding: 20px;
+}
+
+.container:hover {
+
+  background-color: #2a0b4be0;
+  height: auto;
+  width: 450px;
+  transition-duration: 1s;
+}
+
+
+.container ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+	/* overflow: auto; */
+}
+
+ul li{
+  color: #AAAAAA;
+  display: block;
+  position: relative;
+  float: left;
+  width: 80%;
+  height: 60px;
+	border-bottom: 1px solid #333;
+}
+
+ul li input[type=radio]{
+  position: absolute;
+  visibility: hidden;
+}
+
+ul li label{
+  font-family: Arial;
+  display: block;
+  position: relative;
+  font-weight: 300;
+  font-size: 1.18em;
+  padding: 25px 25px 25px 80px;
+  margin: 10px auto;
+  height: 30px;
+  z-index: 9;
+  cursor: pointer;
+  -webkit-transition: all 0.25s linear;
+}
+
+ul li:hover label{
+	color: #FFFFFF;
+}
+
+ul li .check{
+  display: block;
+  position: absolute;
+  border: 5px solid #AAAAAA;
+  border-radius: 100%;
+  height: 15px;
+  width: 15px;
+  top: 30px;
+  left: 20px;
+	z-index: 5;
+	transition: border .25s linear;
+	-webkit-transition: border .25s linear;
+}
+
+ul li:hover .check {
+  border: 5px solid #FFFFFF;
+}
+
+ul li .check::before {
+  display: block;
+  position: absolute;
+	content: '';
+  border-radius: 100%;
+  height: 10px;
+  width: 10px;
+  top: 2.5px;
+	left: 2.5px;
+  margin: auto;
+	transition: background 0.25s linear;
+	-webkit-transition: background 0.25s linear;
+}
+
+input[type=radio]:checked ~ .check {
+  border: 5px solid #CC3363;
+}
+
+input[type=radio]:checked ~ .check::before{
+  background: #CC3363;
+}
+
+input[type=radio]:checked ~ label{
+  color: #cc3363;
+}
+
+
+
