--- a/Ex2/web_app/public/stylesheets/exp_style.css
+++ b/Ex2/web_app/public/stylesheets/exp_style.css
@@ -7,7 +7,6 @@
 .buttonRow {
   display: flex;
   justify-content: space-around;
-  flex-direction: column;
   align-items: center;
 }
 
@@ -16,14 +15,12 @@
   font-family: monospace
 }
 
-button {
+.option {
 
   width: 300px;
   height: 70px;
   position: relative;
   background: #3a096e;
-  /* background: #280a49; */
-  /* background: #340f5c; */
   margin-bottom: 25px;
   border-radius: 20px;
   border: none;
@@ -37,9 +34,9 @@ button {
           4px 4px 6px rgba(0, 0, 0, 0.2); */
 }
 
-button:hover {
+.option:hover {
 
-  box-shadow: inset -3px -3px 6px rgba(255, 255, 255, 0.5),
+  box-shadow: inset -3px -3px 6px rgba(0, 0, 0, 0.1),
     inset 6px 6px 12px rgba(0, 0, 0, 0.1);
 
 }
