--- a/Ex2/web_app/views/experimentview.ejs
+++ b/Ex2/web_app/views/experimentview.ejs
@@ -3,6 +3,7 @@
 <body>
     
     <div id="desc" class="description">
+        <h3>Instructions</h3>
         <p>
             In this experiment you will see a sequence of words on the screen. 
             Then, when you click Start, 4 different spellings of that sequence will appear in either camel case or kebab case.
@@ -11,19 +12,13 @@
             Your goal is to click on the correct spelling as quickly as possible.
         </p>
         <p>
-            If you want to stop the experiment, you can close the web page at any time. No data about you will be saved if you don't finish the experiment.
-        </p>
-        <p>
             Before you begin the experiment, you can see how it works by trying it in a test environment.
         </p>
-
-        <br><br><br>
-
         <div class="buttonRow">
-            <button id="startExperimentButton" onclick="start()">
+            <button id="startExperimentButton" class="fancybtn" onclick="start()">
                 Start Experiment
             </button>
-            <button id="testExperimentButton" onclick="test()">
+            <button id="testExperimentButton" class="fancybtn" onclick="test()">
                 Test Experiment
             </button>
         </div>
@@ -43,7 +38,7 @@
             <button class="option" id="option4" onclick="clickOption(3)"></button>
         </div>
         <div class="buttonRow">
-            <button id="startButton" onclick="show()">
+            <button id="startButton" class="option" onclick="show()">
                 Start
             </button>
         </div>
@@ -160,7 +155,9 @@
                     "time": window.performance.now() - startTime, 
                     "style": style.name, 
                     "correctI": correctIndex,
-                    "correctS": wordArray[0]
+                    "correctS": wordArray[0],
+                    "device": localStorage.getItem("device"),
+                    "csexp": localStorage.getItem("csexp")
                 })
             localStorage.setItem("final", JSON.stringify(final))
         }
