--- a/Ex2/web_app/public/stylesheets/style.css
+++ b/Ex2/web_app/public/stylesheets/style.css
@@ -105,7 +105,6 @@ label:hover{
   animation-timing-function: steps(2, end);
   width: 295px;
   height: 80px;
-  
 }
 /* 
 @keyframes glitch {
@@ -257,5 +256,41 @@ input[type=radio]:checked ~ label{
   color: var(--primary-red);
 }
 
+form {
+  margin: 30px;
+}
+
+@media screen and (max-width: 1000px) {
+  .description p, .description {
+    margin: 0;
+    font-size: small;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .fancybtn {
+    width: 300px;
+  }
+
+  .grid {
+    flex-direction: column;
+  }
+
+  .container h3 {
+    font-size: 2em;
+  }
+
+  .container label {
+    font-size: 1.5em;
+  }
+
+  .container:hover {
+    width: 80vw;
+  }
+
+  h1 {
+    font-size: 3em;
+  }
+}
 
 
