--- a/Ex2/web_app/views/experimentview.ejs
+++ b/Ex2/web_app/views/experimentview.ejs
@@ -12,15 +12,16 @@
             Your goal is to click on the correct spelling as quickly as possible.
         </p>
         <p>
-            Before you begin the experiment, you can see how it works by trying it in a test environment.
+            Before you begin the experiment, you can see how it works by trying it in a test environment by clicking on "Test Experiment".
+            When you're ready, click on "Start Experiment" to begin.
         </p>
         <div class="buttonRow">
-            <button id="startExperimentButton" class="fancybtn" onclick="start()">
+            <div class="buttonRowW"><button id="startExperimentButton" class="fancybtn" onclick="start()">
                 Start Experiment
-            </button>
-            <button id="testExperimentButton" class="fancybtn" onclick="test()">
+            </button></div>
+            <div class="buttonRowW"><button id="testExperimentButton" class="fancybtn" onclick="test()">
                 Test Experiment
-            </button>
+            </button></div>
         </div>
     </div>
 
@@ -30,14 +31,13 @@
     <div id="experiment" style="display:none;">
        
         <h1 id="wordsTitle" class="mono"></h1>
-        <br><br><br>
-        <div id="buttonBox" style="display:none;" class="buttonRow mono">
+        <div id="buttonBox" style="display:none;" class="buttonRow mono mup">
             <button class="option" id="option1" onclick="clickOption(0)"></button>
             <button class="option" id="option2" onclick="clickOption(1)"></button>
             <button class="option" id="option3" onclick="clickOption(2)"></button>
             <button class="option" id="option4" onclick="clickOption(3)"></button>
         </div>
-        <div class="buttonRow">
+        <div class="buttonRow mup">
             <button id="startButton" class="option" onclick="show()">
                 Start
             </button>
