--- a/Ex2/web_app/views/index.ejs
+++ b/Ex2/web_app/views/index.ejs
@@ -40,8 +40,8 @@
           </div>
         </li>
         <li>
-          <input type="radio" id="t-option" name="device" value="other">
-          <label for="t-option">Other</label>
+          <input type="radio" id="o-option" name="device" value="other">
+          <label for="o-option">Other</label>
           <div class="check">
             <div class="inside"></div>
           </div>
