--- a/Ex2/web_app/public/stylesheets/exp_style.css
+++ b/Ex2/web_app/public/stylesheets/exp_style.css
@@ -2,12 +2,34 @@
 #experiment {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+h1 {
+  font-size: 3em;
+  width: 350px;
+  height: 100px;
+  background: rgba(0, 0, 0, 0.106);
+  margin-bottom: 25px;
+  border-radius: 20px;
+  border: none;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonRow {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
+  height: 200px;
+  width: 800px;
+  flex-wrap: wrap;
+}
+
+.buttonRowW {
+  width: 300px;
 }
 
 .mono *,
@@ -20,13 +42,13 @@
   width: 300px;
   height: 70px;
   position: relative;
-  background: #3a096e;
+  background: #fff;
   margin-bottom: 25px;
   border-radius: 20px;
   border: none;
   text-align: center;
   font-size: 24px;
-  color: #fff;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   transition: all 0.1s ease-in-out;
 
@@ -36,7 +58,43 @@
 
 .option:hover {
 
-  box-shadow: inset -3px -3px 6px rgba(0, 0, 0, 0.1),
-    inset 6px 6px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: inset -3px -3px 6px rgba(0, 0, 0, 0.3),
+    inset 6px 6px 12px rgba(0, 0, 0, 0.3);
+
+}
+
+.mup {
+  margin-top: 10vh;
+}
+
+p {
+  width: 80%;
+}
+
+@media screen and (max-width: 1000px) {
+
+  p {
+    width: 100%;
+  }
+
+  .buttonRow {
+    width: 90vw;
+  }
+
+  h1 {
+    width: 400px;
+    height: 120px;
+    font-size: 4em;
+  }
+
+  .option {
+    width: 350px;
+    height: 100px;
+    font-size: 3em;
+  }
+
+  h3 {
+    width: 80vw;
+  }
 
 }
